stats activity added
-variables redefined
-new activities created
-graphs needs to be added in stats xml file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".playZoneActivity">
-        </activity>
+        <activity android:name=".playZoneActivity"></activity>
+
+        <activity android:name="statsActivity"></activity>
     </application>
 
 </manifest>
